--- a/MagicQuiz/MagicQuiz/UumasoqSunnava2-Info.plist
+++ b/MagicQuiz/MagicQuiz/UumasoqSunnava2-Info.plist
@@ -12,8 +12,6 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -31,8 +29,10 @@
 	</dict>
 	<key>UIInterfaceOrientation</key>
 	<string>UIInterfaceOrientationPortrait</string>
-	<key>UILaunchImageFile~iphone</key>
+	<key>UILaunchImageFile</key>
 	<string>Default.png</string>
+	<key>UILaunchImageFile~ipad</key>
+	<string>Default_ipad.png</string>
 	<key>UIPrerenderedIcon</key>
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
