--- a/MagicQuiz/MagicQuiz/UumasoqSunnava2-Info.plist
+++ b/MagicQuiz/MagicQuiz/UumasoqSunnava2-Info.plist
@@ -18,6 +18,10 @@
 	<string>2.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict/>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
